# wildfire-survival-analysis

./: README.md  main.py  pyproject.toml  requirements.txt
data/: submission.csv
notebooks/: 1_eda.ipynb  2_feature_engineering.ipynb  3_modeling.ipynb  survival_eda.py
outputs/: submission.csv
src/: __init__.py  calibration.py  data.py  evaluation.py  feature_engineering.py  modeling.py  preprocessing.py  survival_models.py
